--- a/index.html
+++ b/index.html
@@ -361,12 +361,14 @@
     }
 
     $(function() {
+        $('.prediction').show();
 
         var dd = new DropDown( $('#dd') );
 
         $(document).click(function() {
             // all dropdowns
             $('.wrapper-dropdown-3').removeClass('active');
+
         });
     });
 
