--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 
 <section class="home">
+    <img src="images/monash.png">
     <!--<div class="view" id="view">-->
         <!--<div class="view-inner text-center">-->
             <!--Getting Started-->
@@ -149,7 +150,7 @@
 
   <div class="">
         <h3 class="text-center" id="titleofchart" style="font-weight:700;">Total Crashes</h3>
-        <h5 class="text-center">The number of <b><span id="crash-type">Total Crashes</span></b> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> changed from 2009, based on data provided by VicRoads</h5><br>
+        <h5 class="text-center">The number of <b><span id="crash-type">Total Crashes</span></b> in <span class="result-zone">Melbourne</span> in 2013 was <span class="crash-data">9,934</span> changed from <span class="crash-old-data">9,741</span> in 2009, based on data provided by VicRoads</h5><br>
         <div id="detail-chart" style="height:300px; width:50%; margin-right:auto; margin-left:auto;"></div>
   </div>
 
